# Law-RAG-Agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
data/: eval_dataset.json  eval_dataset.json.bak  eval_queries.json
docker/: init.sql
docs/: adr-001-retrieval-config-alignment.md  adr-002-remove-chapter-summary.md  answer_quality.md  ppt_brief.md  presentation.pptx  retrieval_eval.md  retrieval_noise_fix.md  smoke_test_report.md  technical_report.md  unit_test_report.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: index.js
frontend/src/components/: ChatInput.vue  ChatMessage.vue  Sidebar.vue
frontend/src/router/: index.js
scripts/: batch_eval.py  build_bm25.py  build_index.py  check_articles.py  compare_models.py  demo.py  eval_answer_quality.py  eval_retrieval.py  fill_eval_dataset.py  generate_eval_dataset.py  generate_ppt.js  generate_report.js  migrate_to_pgvector.py  smoke_test.py  test_llm.py  test_rag.py
src/: config.py
src/agents/: graph.py
src/api/: auth.py  conversation_store.py  dependencies.py  main.py  models.py  routes.py
src/chunking/: chunker.py  parser.py
src/embedding/: embedder.py  vector_store.py
src/llm/: client.py
src/rag/: adjacent_expander.py  engine.py  hybrid_retriever.py  intent.py  reranker.py  retriever.py
static/: index.html
tests/: conftest.py  test_api.py  test_chunking.py  test_classify.py  test_embedding.py  test_llm.py  test_rag_engine.py
(+4 files in other folders)
