[project]
name = "law-rag-agent"
version = "0.1.0"
description = "基于本地 LLM 的法律法规智能问答系统（RAG + 多 Agent）"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Henzhi" },
]

dependencies = [
    # ---- Web / API 层（支撑需求：F-08、NF-1）----
    "fastapi~=0.115.0",          # 0.115.14 — 稳定，与 pydantic 2.10.x 深度兼容
    "uvicorn[standard]~=0.34.0",  # 0.34.3  — 支持 StreamingResponse 流式输出
    "pydantic~=2.10.0",          # 2.10.6  — FastAPI 数据校验核心
    "python-dotenv~=1.0.0",      # 1.0.1   — 环境变量管理

    # ---- Agent / RAG 编排（支撑需求：F-05、F-07、NF-3）----
    "langchain~=1.3.0",          # 1.3.11 — 最新稳定版，Tool/Retriever/记忆抽象
    "langgraph~=1.2.0",          # 1.2.8  — StateGraph 有状态多 Agent 编排

    # ---- 向量检索（支撑需求：F-04、NF-1）----
    "faiss-cpu~=1.9.0",          # 1.9.0.post1 — IndexFlatIP + 归一化内积

    # ---- Embedding（支撑需求：F-03、NF-3）----
    # 使用 Ollama 原生 nomic-embed-text（通过 ollama Python SDK 调用）
    # 不再依赖 sentence-transformers，无需 torch/scipy 等大体积 ML 包

    # ---- 爬虫（支撑需求：F-01、NF-2、C-1）----
    "requests~=2.32.0",          # 2.32.5 — HTTP 客户端
    "beautifulsoup4~=4.12.0",    # 4.12.3 — HTML 解析
    "selenium~=4.27.0",          # 4.27.1 — 动态页面兜底

    # ---- 本地 LLM 客户端（支撑需求：C-2、C-3、NF-2）----
    "ollama~=0.4.0",             # 0.4.9 — 对接本地 Ollama 服务
]

[tool.uv]
# 本项目为应用程序（非 Python 库），不构建分发包
package = false
